k8s/python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-app
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-flask-app
  template:
    metadata:
      labels:
        app: python-flask-app
    spec:
      containers:
        - name: flask-app
          image: itsverysimple/flask-k8s:latest
          ports:
            - containerPort: 5000
