k8s/python/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: python-service
  namespace: prod
spec:
  selector:
    app: python-flask-app 
  ports:
  - port: 80  
    targetPort: 5000
